相対インポート

--- a/module.ipynb
+++ b/module.ipynb
@@ -125,8 +125,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "__pycache__   mymodule4.py  mymodule6.py\n",
-      "mymodule2.py  mymodule5.py  mymodule7.py\n"
+      "__pycache__  mymodule2.py\n"
      ]
     }
    ],
@@ -521,7 +520,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "mymodule1.py  mymodule3.py  random.py\n"
+      "mymodule1.py\n"
      ]
     }
    ],
@@ -848,8 +847,7 @@
      "output_type": "stream",
      "text": [
       "mymodule1.py  mymodule3.py  random.py\n",
-      "modules/mymodule2.py  modules/mymodule5.py  modules/mymodule7.py\n",
-      "modules/mymodule4.py  modules/mymodule6.py\n"
+      "modules/mymodule2.py  modules/mymodule4.py\n"
      ]
     }
    ],
@@ -903,57 +901,75 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`mymodule1.py`は`mymodule5.py`よりも一つ上の階層にあるのでインポートできない（見つけられない）。\n",
-    "\n",
-    "ちなみに、`-m`オプションをつけるとカレントディレクトリにpathが通る。実行するモジュールをpythonスクリプトと同じような感じで指定する。"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/home/komiya/works/python-memo\n",
-      "/home/komiya/.miniforge3/envs/basic/lib/python310.zip\n",
-      "/home/komiya/.miniforge3/envs/basic/lib/python3.10\n",
-      "/home/komiya/.miniforge3/envs/basic/lib/python3.10/lib-dynload\n",
-      "/home/komiya/.miniforge3/envs/basic/lib/python3.10/site-packages\n",
-      "__file__: /home/komiya/works/python-memo/modules/mymodule4.py\n"
-     ]
-    }
-   ],
-   "source": [
-    "!python -m modules.mymodule4"
+    "`mymodule1.py`は`mymodule5.py`よりも一つ上の階層にあるのでインポートできない（見つけられない）。"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "また、ファイルパスはカレントディレクトリが基準になるので注意。"
+    "また、インポートするファイルの中で別のファイルをインポートするときも`sys.path`は変わらない。最初に実行したファイルの親ディレクトリにpathが通る。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "code = r\"\"\"\n",
+    "print(\"__file__:\", __file__)\n",
+    "import sys\n",
+    "print('\\n'.join(sys.path))\n",
+    "\"\"\"\n",
+    "with open(\"modules/mymodule6.py\", \"w\") as f:\n",
+    "    f.write(code)\n",
+    "\n",
+    "code = r\"\"\"\n",
+    "print(\"__file__:\", __file__)\n",
+    "import sys\n",
+    "print('\\n'.join(sys.path))\n",
+    "print('----------')\n",
+    "import modules.mymodule6\n",
+    "\"\"\"\n",
+    "with open(\"mymodule7.py\", \"w\") as f:\n",
+    "    f.write(code)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 38,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "__file__: /home/komiya/works/python-memo/mymodule7.py\n",
+      "/home/komiya/works/python-memo\n",
+      "/home/komiya/.miniforge3/envs/basic/lib/python310.zip\n",
+      "/home/komiya/.miniforge3/envs/basic/lib/python3.10\n",
+      "/home/komiya/.miniforge3/envs/basic/lib/python3.10/lib-dynload\n",
+      "/home/komiya/.miniforge3/envs/basic/lib/python3.10/site-packages\n",
+      "----------\n",
+      "__file__: /home/komiya/works/python-memo/modules/mymodule6.py\n",
+      "/home/komiya/works/python-memo\n",
+      "/home/komiya/.miniforge3/envs/basic/lib/python310.zip\n",
+      "/home/komiya/.miniforge3/envs/basic/lib/python3.10\n",
+      "/home/komiya/.miniforge3/envs/basic/lib/python3.10/lib-dynload\n",
+      "/home/komiya/.miniforge3/envs/basic/lib/python3.10/site-packages\n"
+     ]
+    }
+   ],
    "source": [
-    "code = \"\"\"\n",
-    "print(\"__file__:\", __file__)\n",
-    "from pathlib import Path\n",
-    "print('カレントディレクトリ:', Path.cwd())\n",
-    "\n",
-    "print(Path('mymodule1.py').exists())\n",
-    "print(Path('mymodule2.py').exists())\n",
-    "print(Path('modules/mymodule2.py').exists())\n",
-    "\"\"\"\n",
-    "with open(\"modules/mymodule6.py\", \"w\") as f:\n",
-    "    f.write(code)"
+    "!python mymodule7.py"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "ちなみに、`-m`オプションをつけるとカレントディレクトリにpathが通る。実行するモジュールをpythonスクリプトと同じような感じで指定する。"
    ]
   },
   {
@@ -966,6 +982,54 @@
      "output_type": "stream",
      "text": [
       "__file__: /home/komiya/works/python-memo/modules/mymodule6.py\n",
+      "/home/komiya/works/python-memo\n",
+      "/home/komiya/.miniforge3/envs/basic/lib/python310.zip\n",
+      "/home/komiya/.miniforge3/envs/basic/lib/python3.10\n",
+      "/home/komiya/.miniforge3/envs/basic/lib/python3.10/lib-dynload\n",
+      "/home/komiya/.miniforge3/envs/basic/lib/python3.10/site-packages\n"
+     ]
+    }
+   ],
+   "source": [
+    "!python -m modules.mymodule6"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "また、ファイルパスはカレントディレクトリが基準になるので注意。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "code = \"\"\"\n",
+    "print(\"__file__:\", __file__)\n",
+    "from pathlib import Path\n",
+    "print('カレントディレクトリ:', Path.cwd())\n",
+    "\n",
+    "print(Path('mymodule1.py').exists())\n",
+    "print(Path('mymodule2.py').exists())\n",
+    "print(Path('modules/mymodule2.py').exists())\n",
+    "\"\"\"\n",
+    "with open(\"modules/mymodule8.py\", \"w\") as f:\n",
+    "    f.write(code)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "__file__: /home/komiya/works/python-memo/modules/mymodule8.py\n",
       "カレントディレクトリ: /home/komiya/works/python-memo\n",
       "True\n",
       "False\n",
@@ -974,7 +1038,7 @@
     }
    ],
    "source": [
-    "!python modules/mymodule6.py"
+    "!python modules/mymodule8.py"
    ]
   },
   {
@@ -995,7 +1059,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1006,27 +1070,27 @@
     "import mymodule1 # できる\n",
     "import mymodule2 # できる\n",
     "\"\"\"\n",
-    "with open(\"modules/mymodule7.py\", \"w\") as f:\n",
+    "with open(\"modules/mymodule9.py\", \"w\") as f:\n",
     "    f.write(code)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "__file__: /home/komiya/works/python-memo/modules/mymodule7.py\n",
+      "__file__: /home/komiya/works/python-memo/modules/mymodule9.py\n",
       "this is mymodule1\n",
       "this is mymodule2\n"
      ]
     }
    ],
    "source": [
-    "!python modules/mymodule7.py"
+    "!python modules/mymodule9.py"
    ]
   },
   {
@@ -1034,6 +1098,131 @@
    "metadata": {},
    "source": [
     "普通に`'./'`でした。`'.'`や`''`でもいい。`'../'`はダメ。パスはカレントディレクトリが基準なので、そこにパスを通したければ、カレントディレクトリを表す`'./'`を追加する。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "---\n",
+    "\n",
+    "## 相対インポート\n",
+    "\n",
+    "相対的なパスでモジュールを指定し、インポートする。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "以下の様なディレクトリ構造を考える。\n",
+    "\n",
+    "- app/\n",
+    "    - run.py\n",
+    "    - modules/\n",
+    "        - module1.py\n",
+    "        - utils.py\n",
+    "\n",
+    "`run.py`を実行し、その中で`module1.py`をインポートする。ここで、`utils.py`にはいくつかの便利な機能が実装されており、`module1.py`の中でそれらを使いたいとする。\n",
+    "\n",
+    "`utils.py`を使いたいのであれば、単純にインポートしてやればよい。では`import utils`と`module1.py`の中で書けばよいのかというと、そうではない。実行するのが`run.py`なので、`sys.path`には`run.py`の親ディレクトリである`app/`が追加される。`app/`から見て`utils.py`は`modules/`の中にあるので、`import modules.utils`と書く必要がある。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "さあ、これってなんか大変だよね。せっかく同じ階層（`modules`）にあるのだから、もっと簡単に指定できてもよさそう。特に階層が深くなってくると、頭から全ての階層をたどって書かないといけないので面倒くさい。\n",
+    "\n",
+    "ここで使うのが相対インポートで、階層一つを`.`で表して相対的なパスでモジュールを指定する。例えば↑の例だったら、`module1.py`の中に`import .utils`と書けばよい。そのファイルのある階層`modules`を`.`で表している。その更に上の階層（`app/`）を示したかったら`..`と書く: `import ..utils`。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "---\n",
+    "\n",
+    "## `__init__.py`\n",
+    "\n",
+    "ディレクトリをモジュールとして扱うためのファイル。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "これまで、`.py`のついたファイルをインポートしてきたが、実はディレクトリもインポートできる。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n",
+      "<class 'module'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "import modules\n",
+    "print(modules.__file__)\n",
+    "print(type(modules))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "このとき、`modules.なんちゃら`で関数などにアクセスしたい場合、`modules`ディレクトリに`__init__.py`というファイルを置いておく。このファイルにはmodulesがインポートされたときに実行されるコードを書いておく。ここで定義された変数や関数が`modules.なんちゃら`でアクセスできる。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "code = \"\"\"\n",
+    "print('ohayo')\n",
+    "var = 10\n",
+    "def func():\n",
+    "    print('oyasumi')\n",
+    "\"\"\"\n",
+    "with open(\"modules/__init__.py\", \"w\") as f:\n",
+    "    f.write(code)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ohayo\n",
+      "/home/komiya/works/python-memo/modules/__init__.py\n",
+      "10\n",
+      "oyasumi\n"
+     ]
+    }
+   ],
+   "source": [
+    "from importlib import reload\n",
+    "reload(modules)\n",
+    "\n",
+    "print(modules.__file__)\n",
+    "print(modules.var)\n",
+    "modules.func()"
    ]
   }
  ],
